<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0px"
    android:layout_marginStart="0px"
    android:layout_marginLeft="0px"
    android:layout_marginTop="0px"
    android:layout_marginEnd="0px"
    android:layout_marginRight="0px"
    android:layout_marginBottom="0px"
    android:fillViewport="true"
    app:layout_goneMarginBottom="0px"
    app:layout_goneMarginEnd="0px"
    app:layout_goneMarginLeft="0px"
    app:layout_goneMarginRight="0px"
    app:layout_goneMarginStart="0px"
    app:layout_goneMarginTop="0px"
    tools:context=".SellFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="vertical">

        <TextView
            android:id="@+id/akshat_text3"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:layout_below="@+id/team"
            android:layout_marginTop="155dp"
            android:text="@string/D"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/akshat_text2"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:layout_below="@+id/team"
            android:layout_marginTop="77dp"
            android:text="@string/G"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/purpose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="Descripcion"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/purpose_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/purpose"
            android:text="@string/intro"
            android:textSize="20dp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/team"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/purpose_text"
            android:layout_marginTop="30dp"
            android:paddingLeft="5dp"
            android:text="Nuestro equipo"
            android:textSize="30dp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/akshat_text"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:layout_below="@+id/team"
            android:layout_marginTop="3dp"
            android:text="@string/J"
            android:textSize="20dp" />

        <ImageView
            android:id="@+id/akshat_image"
            android:layout_width="match_parent"
            android:layout_height="222dp"
            android:layout_below="@+id/team"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="0px"
            android:layout_marginTop="232dp"
            android:layout_marginEnd="0dp"
            android:adjustViewBounds="false"
            android:background="@drawable/logo_sellba_black"
            android:cropToPadding="false"
            android:paddingLeft="0px"
            android:paddingRight="0px" />

    </RelativeLayout>
</ScrollView>