<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_3"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_centerInParent="true"
            android:background="@drawable/panel_sellba_transparente_1"
            android:contentDescription="TODO" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/orbitron"
                android:textColorHint="@color/white">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:fontFamily="@font/orbitron"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="15dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/orbitron"
                android:textColorHint="@color/white"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/orbitron"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingBottom="15dp" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="7dp"
                android:background="@drawable/rounded_button_transparent"
                android:backgroundTint="@color/md_light_blue_900"
                android:elevation="4dp"
                android:fontFamily="@font/orbitron"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textView_forgotPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/orbitron"
                android:padding="15dp"
                android:text="@string/forgot_pass"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/md_light_blue_900"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textViewSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/orbitron"
                android:padding="15dp"
                android:text="@string/don_t_have_account_sign_up"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/md_light_blue_900"
                android:textSize="15sp" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/orbitron"
            android:textSize="15sp"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>
